# blatt-7-aufgabe-1-leberkashunters

./: .travis.yml  CMakeLists.txt  README.md
avltree/: CMakeLists.txt
test/: CMakeLists.txt
